# nomas

./: .clang-format  .gitignore  .gitmodules  README.md  meson.build
assets/: appdata.xml  desktop  man  meson.build
src/: Makefile  config.h.in  gresources.xml  gschema.xml  meson.build  nomas.c  nomas.gresource.xml  nomas.gschema.xml
src/app/: nomasapp.c  nomasapp.h  nomasappprefs.c  nomasappprefs.h  nomasappwin.c  nomasappwin.h
src/ui/: prefs.ui  window.ui
